--- a/docs/01.md
+++ b/docs/01.md
@@ -6,3 +6,11 @@
 * npm info webpack 查看webpack的所有版本号，方便查看对应版本是否存在
 
 * webpack-cli是让我们可以在命令行里面使用webpack命令
+
+* webpack 是模块打包工具
+
+# 第二天学习
+
+* 图片打包 file-loader 示例：02-01
+* 图片打包 url-loader:转base64字符串,省了http请求 示例：02-02
+* sass打包 sass-loader 示例：02-03
