--- a/docs/01.md
+++ b/docs/01.md
@@ -13,4 +13,12 @@
 
 * 图片打包 file-loader 示例：02-01
 * 图片打包 url-loader:转base64字符串,省了http请求 示例：02-02
+
 * sass打包 sass-loader 示例：02-03
+  css-loader 分析css文件之间的引用
+  style-loader 把css挂载到html的内联style样式里
+  postcss-loader 自动添加css前缀（autoprefixer插件)
+
+* css-loader配置 模块化 示例：02-04 css-modules
+
+* 字体打包 file-loader 示例：02-04 font
