--- a/docs/01.md
+++ b/docs/01.md
@@ -22,3 +22,20 @@
 * css-loader配置 模块化 示例：02-04 css-modules
 
 * 字体打包 file-loader 示例：02-04 font
+
+# 第三天学习
+
+* htmlWebpackPlugin 会在打包结束后自动生成一个html文件，并把打包生成的Js自动引入到这个html文件中。示例：02-05
+
+* CleanWebpackPlugin 自动清除dist 示例：02-05
+
+* entry和output配置 示例：02-06
+
+* sourceMap配置 示例：02-07
+ inline-source-map 没有.map文件 内联了
+ cheap-inline-source-map 具体到第几行，没有到列，提高打包速度，不涉及第三方模块。
+ cheap-module-inline-source-map 第三方模块的错误也会显示
+ eval 执行效率最快，提示并不全面。
+ cheap-module-eval-source-map 开发中推荐此方式调试
+ cheap-module-source-map 生成模式推荐此方式
+ 
