--- a/docs/01.md
+++ b/docs/01.md
@@ -45,3 +45,6 @@
 
 * es6转译 示例：02-10
  webpack-dev-server打包的文件在内存里面，看不到
+ @babel/plugin-transform-runtime 适用于写自己的库是使用，因为@babel/polyfill可能会污染全局环境
+
+* react 内容打包
