--- a/docs/02.md
+++ b/docs/02.md
@@ -1,4 +1,6 @@
-# webpack高级概念
+# 第四天学习
+
+## webpack高级概念
 
 * tree shaking：只支持ES Module 方式引入 示例：03-01
   webpack增加usedExports, 然后
@@ -8,7 +10,7 @@
 
 * code splitting 代码分割 示例：03-03
   1. 同步代码：只要在webpack.common.js中做optimization的splitChunks配置。
-  2. 异步代码：无需做配置。
+  2. 异步代码：@babel/plugin-syntax-dynamic-import。
   增加CleanWebpackPlugin 的正确配置
 
 * splitChunks的配置 示例：03-04
@@ -20,5 +22,15 @@
  webpackPrefetch 主代码加载完后，就开始加载其它的东西
  webpackPreLoad: 和主代码一起加载
 
-* output 增加chunkFilename 间接引入模块 示例：03-07
+* css代码分割 示例：03-07
+  output 增加chunkFilename 间接引入模块
   mini-css-extract-plugin 把css文件单独打包处理 替换了style-loader
+
+* webpack与浏览器缓存 示例：03-08
+  contenthash 根据文件内容产生的hash
+
+* shimming 垫片的作用 示例：03-09
+ webpack.ProvidePlugin
+ imports-loader
+
+* 环境变量的使用方法
