--- a/docs/03.md
+++ b/docs/03.md
@@ -14,3 +14,8 @@
   @types/lodash 库的typescript依赖
 
 * webpackDevServer 实现请求转发 示例：04-04
+
+* webpackDevServer 单页面路由 示例：04-05
+  historyApiFallback: true, 开发环境路由history模式支持
+
+* eslint 在webpack中的配置 eslint-loader 示例：04-06
