--- a/docs/03.md
+++ b/docs/03.md
@@ -19,3 +19,28 @@
   historyApiFallback: true, 开发环境路由history模式支持
 
 * eslint 在webpack中的配置 eslint-loader 示例：04-06
+
+## webpack打包优化  示例：04-07
+
+1. 升级webpack，node，npm
+
+2. 在尽可能少的模块上应用Loader
+
+3. Plugin尽可能精简并确保可靠
+
+4. resolve参数合理配置 extensions不要配置太多 示例：04-08
+
+5. 使用DllPlugin(把公共插件提取出来)提高打包速度
+   DllPlugin AddAssetHtmlWebpackPlugin 示例：04-09
+
+6. 控制包文件大小
+
+7. thread-loader, paraller-webpack(多页面打包), happypack 多进程打包
+
+8. 合理使用sourceMap
+
+9. 结合stats分析打包结果
+
+10. 开发环境内存编译，开发环境无用插件剔除
+
+## 多页面打包 示例：04-10
